--- a/public/tag_cloud.less
+++ b/public/tag_cloud.less
@@ -49,3 +49,39 @@
 .tag-cloud-fontsize-slider .noUi-connect {
   background: #e4e4e4;
 }
+
+rect {
+  stroke-width: 0px;
+  cursor: pointer;
+}
+
+rect.cell-hover {
+        stroke: #F00;
+        stroke-width:0.3px;   
+}
+
+#tooltip {
+        position: absolute;
+        width: auto;
+        height: auto;
+        padding: 10px;
+        background-color: white;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        border-radius: 10px;
+        -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+        -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+        box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+        pointer-events: none;
+      }
+
+      #tooltip.hidden {
+        display: none;
+      }
+
+      #tooltip p {
+        margin: 0;
+        font-family: sans-serif;
+        font-size: 12px;
+        line-height: 20px;
+      }
