--- a/public/tag_cloud.less
+++ b/public/tag_cloud.less
@@ -57,31 +57,21 @@ rect {
 
 rect.cell-hover {
         stroke: #F00;
-        stroke-width:0.3px;   
+        stroke-width:0.3px;
 }
 
-#tooltip {
-        position: absolute;
-        width: auto;
-        height: auto;
-        padding: 10px;
-        background-color: white;
-        -webkit-border-radius: 10px;
-        -moz-border-radius: 10px;
-        border-radius: 10px;
-        -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-        -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-        box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-        pointer-events: none;
-      }
 
-#tooltip.hidden {
-        display: none;
+div.tooltip {
+  color: white;
+  position: absolute;
+  text-align: start;
+  background-color: black;
+  width: auto;
+  height: auto;
+  padding: 10px;
+  border: 2px;
+  border-radius: 8px;
+  pointer-events: none;
+  line-height: 20px;
 }
 
-#tooltip p {
-        margin: 0;
-        font-family: sans-serif;
-        font-size: 12px;
-        line-height: 20px;
-}
