well format the tooltip and fix the fake status.data changed

--- a/public/tag_cloud.less
+++ b/public/tag_cloud.less
@@ -51,13 +51,14 @@
 }
 
 rect {
-  stroke-width: 0px;
+  stroke: grey;
+  stroke-width: 1px;
   cursor: pointer;
 }
 
 rect.cell-hover {
         stroke: #F00;
-        stroke-width:0.3px;
+        stroke-width:0.8px;
 }
 
 
