well done for all the components

--- a/public/tag_cloud.less
+++ b/public/tag_cloud.less
@@ -61,6 +61,11 @@ rect.cell-hover {
         stroke-width:0.8px;
 }
 
+.series-title {
+  //font-family: Roboto, sans-serif;
+  font-size: 0.8em;
+  font-weight: 300;
+}
 
 div.tooltip {
   color: white;
