never validate the cell size since show all data

--- a/public/wafer_map.less
+++ b/public/wafer_map.less
@@ -57,8 +57,9 @@ rect {
 }
 
 rect.cell-hover {
-        stroke: #F00;
-        stroke-width:0.8px;
+        stroke: black;
+        stroke-width:2px;
+        shape-rendering: crispEdges;
 }
 
 .series-title {
@@ -69,6 +70,7 @@ rect.cell-hover {
 
 div.tooltip {
   color: white;
+ //position:relative;
   position: absolute;
   text-align: start;
   background-color: black;
